tests/ui/mir/validate/validate-unsize-cast.stderr
error[E0277]: the trait bound `T: Unsize<U>` is not satisfied
  --> $DIR/validate-unsize-cast.rs:10:42
   |
LL | impl<T: ?Sized, U: ?Sized> CastTo<U> for T {}
   |                                          ^ the trait `Unsize<U>` is not implemented for `T`
   |
   = note: all implementations of `Unsize` are provided automatically by the compiler, see <https://doc.rust-lang.org/stable/std/marker/trait.Unsize.html> for more information
note: required by a bound in `CastTo`
  --> $DIR/validate-unsize-cast.rs:7:30
   |
LL | pub trait CastTo<U: ?Sized>: Unsize<U> {}
   |                              ^^^^^^^^^ required by this bound in `CastTo`
help: consider further restricting type parameter `T` with unstable trait `Unsize`
   |
LL | impl<T: ?Sized + std::marker::Unsize<U>, U: ?Sized> CastTo<U> for T {}
   |                ++++++++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
